[package]
name = "alloy-rs-examples-priv"
description = "Custom examples from alloy-rs-examples repo"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1.0", features = ["signer-keystore"]}
eyre = "0.6"
rand = "0.8.5"
tokio = {version = "1.48", features = ["macros", "rt-multi-thread"]}
