[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version="2.0", features=["rustls"]}
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6"
dotenv = "0.15.0"
