[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.9", default-features = false, features = ["rustls"]}
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
dotenv = "0.15.0"
serde_json = "1.0.107"
serde = { version = "1.0.190", features = ["derive"] }
# rlp = { version = "0.5.2", features = ["derive"] }
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
url = { version = "2.4.1", default-features = false }
false = "0.0.0"
